@@ -47,4 +47,33 @@ sub trace {
 	shift->repository->trace(@_);
 }
 
+
+
+
+
+#####################################################################
+# Module::Install Enhancement
+
+# Find the version of Module::Install bundled in the tarball
+sub inc_mi {
+	my $self = shift;
+	my $file = $self->file('inc/Module/Install.pm');
+	unless ( -f $file ) {
+		return undef;
+	}
+
+	# Find the version
+	my $makefile = $self->_slurp($file);
+	unless ( $makefile =~ /use\s+inc::Module::Install\b/ ) {
+		# Doesn't use Module::Install
+		return undef;
+	}
+	unless ( $makefile =~ /use\s+inc::Module::Install(?:::DSL)?\s+([\d.]+)/ ) {
+		# Does not use a specific version of Module::Install
+		return 0;
+	}
+
+	return "$1";
+}
+
 1;
