@@ -3,6 +3,7 @@ Changes for Perl extension ADAMK-Repository
 0.11 to be released
 	- Add support for svn log
 	- Add svn log into "report_changed_versions" and "module" commands
+	- Add CLEANUP => 1 to all tempdir calls
 
 0.10 Mon 20 Apr 2009
 	- Added function  ADAMK::Util::ljoin
